write Project component to be loaded within Projects page. Fix footer styling to not overlap with content.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,6 +1,6 @@
 #wrapper {
     position: relative;
-    min-height: 120vh;
+    min-height: 100vh;
     background-color: #dfecdf;
 }
 
