--- a/portfolio/src/components/Footer/style.css
+++ b/portfolio/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 #footer {
   position: absolute;
-  bottom: 5%;
+  bottom: 0;
   width: 100%;
   margin-top: -2.5rem;
   height: 2.5rem;  /* Footer height */
